tests/syntax_error/array_size.jou
def foo(x: int[1 2])  # Error: expected a ']' to end the array size, got an integer
